--- a/inst/paper/jitter2D_sketch.html
+++ b/inst/paper/jitter2D_sketch.html
@@ -244,6 +244,10 @@ Figure&nbsp;4: Non-linear data
 <li><p>Survey data scatter plot with subsampling method</p></li>
 <li><p>Age and deaths? Excess deaths in COVID?</p></li>
 <li><p>more ???</p></li>
+<li><p>survey, weighted data</p></li>
+<li><p>scagnostics work</p></li>
+<li><p>where one area measured on one scale and another on a different scale,</p></li>
+<li><p>viewing bootstrap samples</p></li>
 </ul>
 </section>
 </section>
