--- a/inst/paper/jitter2D_sketch.html
+++ b/inst/paper/jitter2D_sketch.html
@@ -115,7 +115,7 @@ window.Quarto = {
 
 <section id="introduction" class="level1" data-number="1">
 <h1 data-number="1"><span class="header-section-number">1</span> Introduction</h1>
-<p>We have included some ideas and examples for Jittered scatter plots in this document.</p>
+<p>For various reasons it is useful for spreading points in dotplot or scatterplot displays. When points are overplotted in a display the assessment of the distribution or association between variables may not be accurately interpreted. There is a long history of using dotplots for examining distributions, with a variety of recommended methods for spreading apart identical points. <span class="citation" data-cites="Wilkinson01081999">Wilkinson (<a href="#ref-Wilkinson01081999" role="doc-biblioref">1999</a>)</span> provides a simple and comprehensive discussion.</p>
 <section id="related-work" class="level2" data-number="1.1">
 <h2 data-number="1.1" class="anchored" data-anchor-id="related-work"><span class="header-section-number">1.1</span> Related work</h2>
 <p>Some alternative plots to deal with over plotting are gather plots <span class="citation" data-cites="park2017gatherplots">Park, Kim, and Elmqvist (<a href="#ref-park2023gatherplot" role="doc-biblioref">2023</a>)</span>, also in dimensionality reduction vizualization exploretree plot<span class="citation" data-cites="marcilio2021explorertree">(<a href="#ref-marcilio2021explorertree" role="doc-biblioref">Marcı́lio-Jr et al. 2021</a>)</span>, and recently integral images to “de-cluttering” scatter plots <span class="citation" data-cites="rave2024cluttering">(<a href="#ref-rave2024cluttering" role="doc-biblioref">Rave, Molchanov, and Linsen 2024</a>)</span>.</p>
